2013-05-04  Junichi Satoh  <junichi@rworks.jp>

	* mobile/index.php, mobile/include/user.class.php,
	mobile/include/ui.class.php, include/functions.php: Fixed i18n failure
	in the mobile console.

	Merged from trunk.

2013-04-29  Sergio Martin <sergio.martin@artica.es>

	* images/status_sets/faces/severity_informational.png
	images/status_sets/faces/severity_warning_pixel.png
	images/status_sets/faces/agent_critical_ball.png
	images/status_sets/faces/module_unknown.png
	images/status_sets/faces/module_warning_ball.png
	images/status_sets/faces/module_ok_ball.png
	images/status_sets/faces/module_alertsfired.png
	images/status_sets/faces/severity_maintenance.png
	images/status_sets/faces/agent_no_data_ball.png
	images/status_sets/faces/agent_ok_ball.png
	images/status_sets/faces/severity_normal_pixel.png
	images/status_sets/faces/severity_critical.png
	images/status_sets/faces/server_down_ball.png
	images/status_sets/faces/alert_not_fired_ball.png
	images/status_sets/faces/severity_informational_pixel.png
	images/status_sets/faces/module_unknown_ball.png
	images/status_sets/faces/severity_warning.png
	images/status_sets/faces/agent_down_ball.png.png
	images/status_sets/faces/module_no_data_ball.png
	images/status_sets/faces/alert_fired_ball.png
	images/status_sets/faces/agent_warning_ball.png
	images/status_sets/faces/severity_maintenance_pixel.png
	images/status_sets/faces/agent_no_monitors_ball.png
	images/status_sets/faces/alert_disabled_square.png
	images/status_sets/faces/severity_normal.png
	images/status_sets/faces/severity_critical_pixel.png
	images/status_sets/faces/alert_disabled_ball.png
	images/status_sets/faces/module_critical_ball.png
	images/status_sets/faces/server_ok_ball.png
	images/status_sets/color_text/severity_informational.png
	images/status_sets/color_text/module_critical.png
	images/status_sets/color_text/server_ok.png
	images/status_sets/color_text/alert_not_fired.png
	images/status_sets/color_text/severity_warning_pixel.png