@@ -1,0 +1,12 @@
+<?php
+/* Include package help/es
+*/
+?>
+
+<p> El intervalo del módulo define la periodicidad con la que el módulo debería devolver datos. Si transcurre el doble del intervalo del módulo y no hay datos nuevos, puede ocurrir una de estas dos cosas:
+<ol>
+<li>Si el módulo es asíncrono su estado se reinicia a normal.</li>
+<li>Si el módulo es síncrono su estado pasa a desconocido.</li>
+</ol>
+</p>
+
